--- a/misc/demo/index.html
+++ b/misc/demo/index.html
@@ -7,6 +7,8 @@
         <script src="http://ajax.googleapis.com/ajax/libs/angularjs/<%= ngversion %>/angular.js"></script>
         <script src="http://ajax.googleapis.com/ajax/libs/angularjs/<%= ngversion %>/angular-cookies.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/<%= uibsversion%>/ui-bootstrap-tpls.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/angulartics/<%= angticsversion %>/angulartics.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/angulartics/<%= angticsversion %>/angulartics-ga.min.js"></script>
         <script src="assets/app.js"></script>
         <script src="proso-apps-tpls.js"></script>
         <style>
