fix some issues introduced by the previous commit

--- a/misc/demo/index.html
+++ b/misc/demo/index.html
@@ -10,7 +10,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/angulartics/<%= angticsversion %>/angulartics.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/angulartics/<%= angticsversion %>/angulartics-ga.min.js"></script>
         <script src="assets/app.js"></script>
-        <script src="proso-apps-tpls.js"></script>
+        <script src="proso-apps-all.js"></script>
         <style>
             section {
                     padding-top: 30px;
