fix links in demo

--- a/misc/demo/index.html
+++ b/misc/demo/index.html
@@ -66,7 +66,7 @@
                     <section id="<%= module.name %>">
                         <div class="page-header">
                           <h1><%= module.displayName %><small>
-                              (<a target="_blank" href="https://github.com/angular-ui/bootstrap/tree/master/src/<%= module.name %>">ui.bootstrap.<%= module.name %></a>)
+                              (<a target="_blank" href="https://github.com/adaptive-learning/proso-apps-js/tree/master/src/<%= module.name %>">proso.apps.<%= module.name %></a>)
                           </small></h1>
                           </div>
                           <div class="row">
